# eagleEyes

./: LICENSE  README.md
birdseye-harey/: README.md  package.xml  setup.cfg  setup.py
birdseye-harey/benchmark/: CMakeLists.txt  MCMC_intrinsics_report.txt  README.md  acceptance_01_10m_01_dist_report.txt  acceptance_01_10m_01_report.txt  acceptance_01_10m_02_report.txt  acceptance_01_10m_05_report.txt  april_tag_offset_report.txt  backprojection_output2.txt  no_blurry_report.txt  output.txt  output1.txt  output2.txt  output3.txt  output_report.txt  reprojection_output2.txt  sim3_report.txt  sim4_report.txt
birdseye-harey/benchmark/config/: cal.yaml  mcm_intrinsics.yaml  sim.yaml  sim2.yaml  sim3.yaml  sim4.yaml  vis.yaml
birdseye-harey/benchmark/scripts/: analyze.py  error_timeseries.py  fix_json.py  visualize.py
birdseye-harey/benchmark/src/: Birdseye_benchmark.cpp  Birdseye_calibrate.cpp
birdseye-harey/birdseye/: AMI_ContourClassFamily.py  GPS_path_planner.py  SLICAnnotator.py  TSP.py  bEdbc_tests.py  birdsEye.py  birdsEye_tests.py  birdsEye_vis.py  birdseye_trainer.py  cf_triad.py  click_capture.py  dbConnector.py  frame_loader.py  generator.py  gpt_hyperparam_search_idea.py  kml.py  label_stats.py  mask.py  sub_node.py  tile_inference.py  tile_loader.py  timing_analysis.py  train_detection.py  train_detection_tiles.py  train_segmentation.py  train_yolo.py  utilities.py
birdseye-harey/config/: birdsEyeSensorParams.yaml  utilities.py
birdseye-harey/examples/: MCMC_errorfit_demo.py  MCMC_intrinsics_refinement.py  (+2 more)
birdseye-harey/sim/: CMakeLists.txt  README.md  l2_errors.txt  l2_errors_filtered.txt  l2_errors_raw.txt
birdseye-harey/sim/config/: sim.yaml
birdseye-harey/sim/scripts/: analyze.py
birdseye-harey/sim/src/: ortho_synth.cpp  ortho_synth.hpp  sim3D.cpp
(+11 files in other folders)
